--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@
 }
 .hvrbox .hvrbox-text_mobile {
 	font-size: 15px;
+	border-top: 1px solid rgba(179, 179, 179, 0.7);
+	margin-top: 5px;
+	padding-top: 2px;
 	display: none;
 }
 .hvrbox.active .hvrbox-text_mobile {
